# NanoLFA-Design

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  scientific_question.md
.github/workflows/: ci.yml
configs/: default.yaml  md.yaml  scoring.yaml
configs/hpc/: slurm_af_round.sh  slurm_full_pipeline.sh
configs/targets/: e3g.yaml  pdg.yaml
docker/: entrypoint.sh
docs/: DOCKER.md  PROTOCOL.md  SCORING.md  architecture.html
notebooks/: 01_target_preparation.ipynb  02_seed_generation.ipynb  03_design_loop.ipynb  04_specificity_analysis.ipynb  05_lfa_optimization.ipynb  06_experimental_feedback.ipynb
scripts/: docker_smoke_test.py  ingest_experimental.py  optimize_lfa.py  prepare_targets.py  run_design_round.py  run_md_validation.py  run_pipeline.py  screen_crossreactivity.py
scripts/setup/: download_af_params.sh  download_proteinmpnn.sh  fetch_imgt_germlines.py
src/nanolfa/: __init__.py
src/nanolfa/core/: calibration.py  config.py  hpc.py  logging.py  pipeline.py  tracking.py
src/nanolfa/filters/: __init__.py  developability.py  lfa_compat.py  specificity.py
src/nanolfa/lfa/: __init__.py  kinetics.py  orientation.py  stability.py
src/nanolfa/models/: alphafold.py  esmfold.py  md_validation.py  proteinmpnn.py  rfdiffusion.py
src/nanolfa/scoring/: composite.py  confidence.py  energy.py  md_scores.py  structural.py
src/nanolfa/utils/: chemistry.py  pdb.py  plotting.py  sequence.py
tests/: conftest.py  test_filters.py  test_scoring.py  test_sequence.py
